# automate-youtube-with-crewai

./: .env.example  .gitignore  README.md  agents.py  main.py  pyproject.toml  tasks.py  tester.py
tools/: youtube_tools.py  youtube_video_details_tool.py  youtube_video_search_tool.py
utils/: csv_file_io.py  markdown_file_io.py
